# autotimer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  basic.cpp  builder_dsl.cpp  simple_scaling_test.cpp
src/: CMakeLists.txt  autotimer.hh
src/impl/: analytic.hh  export.hh  measurable.hh  scaling.hh  tasks.hh  time_record.hh  timer.hh  utilities.hh
tests/: CMakeLists.txt  test_measurable.cpp  test_scaling_multidim.cpp  test_tasks.cpp
